add CORS configuration based on frontend app URL in properties file